--- a/crea_adb.yaml
+++ b/crea_adb.yaml
@@ -15,7 +15,7 @@
               admin_password: "{{ admin_password }}"
               db_name: "{{ db_name }}"
               data_storage_size_in_tbs: "{{ data_storage_size_in_tbs }}"
-              is_free_tier: true
+              #is_free_tier: true
               state: 'present'
           register: resultado
 
