--- a/stop_adb.yaml
+++ b/stop_adb.yaml
@@ -18,13 +18,12 @@
              that:
                 - resultado.autonomous_databases[0].display_name == display_name
 
-#        - set_fact:
-#             autonomous_database_id: "{{ resultado.autonomous_databases.id }}"
+        - set_fact:
+             autonomous_database_id: "{{ resultado.autonomous_databases.id }}"
 
         - name: Detiene ADB
           oracle.oci.oci_database_autonomous_database_actions:
-#             autonomous_database_id: "{{ autonomous_database_id }}"
-             display_name:  "{{ display_name }}"
+             autonomous_database_id: "{{ autonomous_database_id }}"
              action: 'stop'
           register: result
 
